--- a/RevisaoOO/src/application/clienteForm.fxml
+++ b/RevisaoOO/src/application/clienteForm.fxml
@@ -31,6 +31,7 @@
             <ComboBox fx:id="cbxAgencia" layoutX="151.0" layoutY="188.0" prefWidth="150.0" />
             <Label layoutX="23.0" layoutY="192.0" text="Agência de preferência:" />
             <Button fx:id="btnNovo1" layoutX="211.0" layoutY="238.0" mnemonicParsing="false" onAction="#onNovo" text="Novo" />
+            <Button fx:id="btnNovaAgencia" layoutX="318.0" layoutY="188.0" mnemonicParsing="false" onAction="#onNovaAgencia" text="Nova Agência" />
          </children>
       </Pane>
    </children>
